New Concepts for Day View Calendar Activity has proof of concept in inflating layouts. Took out some formatting in Week View, this is temporary Added the @string "nil" to stand for "null", since "null" is evidently used by Android.