@@ -1,9 +1,17 @@
 package com.freescale.iastate.hvac.calendar;
 
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+import java.util.GregorianCalendar;
+import java.util.Scanner;
+
+import android.util.Log;
+
 public class EventWrapper {
 	//Base parameters
-	public final float HOURS = 24;
+	public final float HOURS = 23;
 	private String ID = null;
+	public final float MINUTE_MULT_CONSTANT_T2F = 60/100; // T2F = convert regular time to float
 	
 	//View Parameters
 	public boolean transparent = false;
@@ -18,7 +26,7 @@ public class EventWrapper {
 	public EventWrapper(float startTime, float endTime){
 		this.startTime = startTime;
 		this.endTime = endTime;
-		this.contents = new Float(getTimeDuration()).toString();
+		this.contents = Float.valueOf(getTimeDuration()).toString();
 	}
 	public EventWrapper(float startTime, float endTime, boolean transparent){
 		this.startTime = startTime;
@@ -36,7 +44,7 @@ public class EventWrapper {
 		this.startTime = startTime;
 		this.endTime = endTime;
 		this.transparent = transparent;
-		this.contents = new Float(getTimeDuration()).toString();
+		this.contents = Float.valueOf(getTimeDuration()).toString();
 		this.ID = id;
 	}
 	
@@ -44,6 +52,9 @@ public class EventWrapper {
 	public EventWrapper setContents(String s) {
 		this.contents = s;
 		return this;
+	}
+	public String getContents(){
+		return this.contents;
 	}
 	public boolean compareOverlap(EventWrapper dw){
 		//returns true if an overlap or invalid format is detected in the argument
@@ -58,6 +69,24 @@ public class EventWrapper {
 		if(endTime > startTime) return endTime-startTime;
 		else return -1f;
 	}
+	public String getTimeEnd() {
+		return this.getTime(this.endTime);
+	}
+	public String getTimeStart(){
+		return this.getTime(this.startTime);
+	}
+	private String getTime(float time) {
+		Calendar cal = new GregorianCalendar();
+		Scanner timeScan = new Scanner(Float.valueOf(time).toString().replace('.',' '));
+		
+		cal.set(Calendar.HOUR_OF_DAY, timeScan.nextInt());
+		cal.set(Calendar.MINUTE, timeScan.nextInt()/60);
+		
+		SimpleDateFormat sdf = new SimpleDateFormat("h:mm a");
+		sdf.setCalendar(cal);
+		return sdf.format(cal.getTime());
+	}
+	
 	public String getID() {
 		return this.ID;
 	}
